--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../bower_components/angular-material-data-table/dist/md-data-table.css"/>
     <link rel="stylesheet" href="../bower_components/angular-toastr/dist/angular-toastr.css"/>
     <link rel="stylesheet" href="../bower_components/selectize/dist/css/selectize.bootstrap3.css"/>
+    <link rel="stylesheet" href="../bower_components/angular-awesome-slider/dist/css/angular-awesome-slider.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css"/>
     <link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="assets/css/material-icons.css"/>
@@ -66,6 +67,7 @@
 <script src="../bower_components/angular-chart.js/dist/angular-chart.js"></script>
 <script src="../bower_components/angular-selectize2/dist/angular-selectize.js"></script>
 <script src="../bower_components/angular-clipboard/angular-clipboard.js"></script>
+<script src="../bower_components/angular-awesome-slider/dist/angular-awesome-slider.min.js"></script>
 
 <!-- App -->
 <script src="js/app.js"></script>
