--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -36,55 +36,55 @@
         <ul class="nav">
             <li ui-sref-active="active">
                 <a ui-sref="setApp.profile" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-list-alt"></i>
                     <span>{{'profile' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="setApp.referralProgram" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-laptop"></i>
                     <span>{{'referralProgram' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="setApp.subscriptions" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-star"></i>
                     <span>{{'subscriptions' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="setApp.domain" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-link"></i>
                     <span>{{'domain' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="setApp.setUp" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-cog"></i>
                     <span>{{'setUp' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="setApp.userManagement" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-user"></i>
                     <span>{{'userManagement' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="setApp.botBlacklist" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-list-ul"></i>
                     <span>{{'botBlacklist' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="setApp.invoices" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="icon-file"></i>
                     <span>{{'invoices' | translate}}</span>
                 </a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="setApp.eventLog" md-ink-ripple>
-                    <md-icon class="material-icons md-dark md-18 nav-icon">view_list</md-icon>
+                    <i class="glyphicon glyphicon-list-alt"></i>
                     <span>{{'eventLog' | translate}}</span>
                 </a>
             </li>
