fix billing display

--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -12,31 +12,31 @@
 				</tr>
 				<tr>
 					<td>Current period:</td>
-					<td>{{item.startTime}} <em ng-show="item.startTime">-</em> {{item.endTime}}</td>
+					<td>{{item.statistic.from}} <em ng-show="item.startTime">-</em> {{item.tatistic.to}}</td>
 				</tr>
 				<tr>
 					<td>Billed events:</td>
-					<td>{{item.statistics.billedEvents}}</td>
+					<td>{{item.statistic.billedEvents}}</td>
 				</tr>
 				<tr>
 					<td>Total events:</td>
-					<td>{{item.statistics.totalEvents}}</td>
+					<td>{{item.statistic.totalEvents}}</td>
 				</tr>
 				<tr>
 					<td>Included events:</td>
-					<td>{{item.plan.eventsLimit}}</td>
+					<td>{{item.statistic.includedEvents}}</td>
 				</tr>
 				<tr>
 					<td>Remaining events:</td>
-					<td>{{item.statistics.remainEvents}}</td>
+					<td>{{item.statistic.remainEvents}}</td>
 				</tr>
 				<tr>
 					<td>Overage events:</td>
-					<td>{{item.statistics.overageEvents}}</td>
+					<td>{{item.statistic.overageEvents}}</td>
 				</tr>
 				<tr>
 					<td>Overage cost:</td>
-					<td>{{item.statistics.overageCost}}</td>
+					<td>{{item.statistic.overageCost}}</td>
 				</tr>
 			</table>
 		</div>
