subscriptions change plan update

--- a/Front/src/tpl/edit-change-paln-dialog.html
+++ b/Front/src/tpl/edit-change-paln-dialog.html
@@ -65,5 +65,6 @@
   </md-dialog-content>
   <md-dialog-actions>
     <md-button class="md-primary" ng-click="ctrl.cancel()">{{'cancel' | translate}}</md-button>
+    <md-button class="md-primary" ng-click="planCommit()">{{'commit' | translate}}</md-button>
   </md-dialog-actions>
 </md-dialog>
