--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -8,7 +8,7 @@
 			<table>
 				<tr>
 					<td>Plan:</td>
-					<td>{{item.plan.name}}</td>
+					<td>{{item.statistic.planCode}}</td>
 				</tr>
 				<tr>
 					<td>Current period:</td>
@@ -52,7 +52,7 @@
 							<span class="pro-price">$<em ng-if="item.plan.price">{{item.plan.price}}</em><em ng-if="!item.plan.price">0</em></span>/mo
 						</span>
 					</div>
-					<md-button class="md-raised copy-btn" ng-click="changePlan()">Change Plan</md-button>
+					<md-button class="md-raised copy-btn" ng-click="changePlan(item.plan.id)">Change Plan</md-button>
 				</div>
 			</div>
     </div>
